<resources>
    <string name="app_name">Covid Contact Tracer</string>
    <string name="launch_activity">Launch activity</string>
    <string name="permission_rationale">Location permission is needed for core functionality.</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
    <string name="str_btn_google_signin">Sign In With Google</string>
    <string name="location_updated">Location Updated: %1$s</string>
    <string name="info_msg">Please DO NOT revoke the permissions for this app. We need to calculate your location accurately and in case of possible vulnerability, we will inform you over email. We anonymously analyse location data and when a person is reported to be infected, we notify his\/her close connections for possibility of infection. Over next week, we will update the app to add more features.</string>
    <string name="risk_header">Your Risk Level</string>
    <string name="contacts_header">Your close contacts</string>

    <string name="risk_value">LOW</string>
    <string name="read_duration">2 mins read</string>
    <string name="no_posts">No Posts</string>
    <string name="select_label_train">Train</string>
    <string name="select_label_submit">SUBMIT</string>
    <string name="select_label_bus">Bus</string>
    <string name="select_label_flight">Flight</string>
    <string name="select_label_other">Other</string>
    <string name="cd_train">train icon</string>
    <string name="cd_submit">submit form</string>
    <string name="cd_bus">bus icon</string>
    <string name="cd_other">other means of transport</string>
    <string name="cd_flight">flight</string>
    <string name="hint_train_number">Enter Train Number</string>
    <string name="hint_bus_number">Enter Bus Number</string>
    <string name="hint_flight_number">Enter Flight Number</string>
    <string name="hint_vehicle_number">Enter Vehicle Number</string>
    <string name="hint_coach_number">Enter Coach Number</string>
    <string name="hint_seat_number">Enter Seat Number</string>
    <string name="label_vehicle_details">Specify Vehicle Details(like Auto, taxi, tempo etc)</string>
    <string name="hint_vehicle_details">Specify Vehicle Details</string>
    <string name="title_activity_service_starter">ServiceStarterActivity</string>
</resources>
