<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BluetoothActivity">

    <LinearLayout
        android:id="@+id/ll_bt_parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/background_dark"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_disclaimer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12sp"
            android:textSize="16sp"
            android:textColor="@color/cardview_light_background"
            android:text="@string/info_msg" />
        <TextView
            android:id="@+id/tv_risk_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="12sp"
            android:paddingRight="12sp"
            android:textSize="36sp"
            android:gravity="center"
            android:textColor="@color/cardview_light_background"
            android:text="@string/risk_header" />
        <TextView
            android:id="@+id/tv_risk_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="12sp"
            android:paddingRight="12sp"
            android:textSize="36sp"
            android:gravity="center"
            android:textColor="@color/cardview_light_background"
            android:text="@string/risk_value" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>