<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    tools:context=".ProfileActivity"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ll_bt_parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/estimote_purple"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="12sp"
            android:paddingRight="12sp"
            android:text="@string/risk_header"
            android:textColor="@android:color/background_light"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/tv_risk_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="12sp"
            android:paddingRight="12sp"
            android:text="@string/risk_value"
            android:textColor="@android:color/background_light"
            android:textSize="36sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="12sp"
            android:paddingRight="12sp"
            android:text="@string/contacts_header"
            android:textColor="@android:color/background_light"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/tv_contact_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="12sp"
            android:paddingRight="12sp"
            android:text="@string/risk_value"
            android:textColor="@android:color/background_light"
            android:textSize="36sp" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>