<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/tv_label_padding">
        <TextView
            android:id="@+id/tv_label_train_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_train_number"
            android:textSize="@dimen/tv_label_text"
            android:padding="@dimen/tv_label_padding"/>

        <EditText
            android:id="@+id/et_train_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/borders_all"
            android:gravity="center"
            android:importantForAutofill="no"
            android:hint="@string/hint_train_number"
            android:inputType="text"
            android:padding="@dimen/et_padding"
            android:textColorHint="@color/md_grey_300"
            android:textSize="32sp" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/tv_label_padding">
        <TextView
            android:id="@+id/tv_label_coach_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_coach_number"
            android:textSize="@dimen/tv_label_text"
            android:padding="@dimen/tv_label_padding"/>

        <EditText
            android:id="@+id/et_coach_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/borders_all"
            android:gravity="center"
            android:importantForAutofill="no"
            android:hint="@string/hint_coach_number"
            android:inputType="text"
            android:padding="@dimen/et_padding"
            android:textColorHint="@color/md_grey_300"
            android:textSize="32sp" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/tv_label_padding">
        <TextView
            android:id="@+id/tv_label_train_seat_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_seat_number"
            android:textSize="@dimen/tv_label_text"
            android:padding="@dimen/tv_label_padding"/>

        <EditText
            android:id="@+id/et_train_seat_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/borders_all"
            android:gravity="center"
            android:importantForAutofill="no"
            android:hint="@string/hint_seat_number"
            android:inputType="text"
            android:padding="@dimen/et_padding"
            android:textColorHint="@color/md_grey_300"
            android:textSize="32sp" />
    </LinearLayout>


</LinearLayout>
